--- a/Adrian Szmajewski CV/Adrian Szmajewski.html
+++ b/Adrian Szmajewski CV/Adrian Szmajewski.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrian Szmajewski - Aspiring Software Developer</title>
