--- a/Adrian Szmajewski CV/contact.html
+++ b/Adrian Szmajewski CV/contact.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Adrian Szmajewski - Aspiring Software Developer</title>
+	<meta name="description" content="I offer web development and software development services tailored to meet your business needs. I create customized websites, applications, and software solutions. From design to deployment, I bring your ideas to life.">
+	<meta name="keywords" content="Web Development, Software Development, Software Solutions, Web Applications, Website Development, Mobile Applications, Full-Stack Development, Front-End, Back-End, UI/UX Design, Digital Transformation, SaaS, Cloud, E-commerce, Enterprise Software, Agile Development">
+	<link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Adrian Szmajewski - Full Stack Web Developer</title>
     <link rel="stylesheet" href="Adrian Szmajewski.css">
 </head>
 <body>
