--- a/Adrian Szmajewski CV/Adrian Szmajewski.html
+++ b/Adrian Szmajewski CV/Adrian Szmajewski.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Meta information for character encoding and responsiveness -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrian Szmajewski - Aspiring Software Developer</title>
+
+	 <!-- Meta description and keywords for SEO optimization -->
 	<meta name="description" content="I offer web development and software development services tailored to meet your business needs. I create customized websites, applications, and software solutions. From design to deployment, I bring your ideas to life.">
 	<meta name="keywords" content="Web Development, Software Development, Software Solutions, Web Applications, Website Development, Mobile Applications, Full-Stack Development, Front-End, Back-End, UI/UX Design, Digital Transformation, SaaS, Cloud, E-commerce, Enterprise Software, Agile Development">
+	
+	<!-- Favicon for browser tab -->
 	<link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
+
+	 <!-- Bootstrap CSS for styling -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <!-- Bootstrap JS for functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+	<!-- Custom CSS file --><!-- Custom CSS file -->
     <link rel="stylesheet" href="Adrian Szmajewski.css">
 </head>
 <body>
     
-	
 		<header>
 			<h1>Adrian Szmajewski</h1>
 			<h2>Aspiring Software Developer</h2>
