--- a/Adrian Szmajewski CV/Adrian_Szmajewski.html
+++ b/Adrian Szmajewski CV/Adrian_Szmajewski.html
@@ -21,24 +21,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 	<!-- Custom CSS file --><!-- Custom CSS file -->
-    <link rel="stylesheet" href="Adrian Szmajewski.css">
+    <link rel="stylesheet" href="Adrian_Szmajewski.css">
 </head>
 <body>
     
-	<!-- Header section containing name, title, and profile image -->
+		<!-- Header section containing name, title, and profile image -->
 		<header>
 			<h1>Adrian Szmajewski</h1>
 			<h2>Aspiring Software Developer</h2>
 			<span><img src="JA32.jpg" alt="This is me"></span>
 		</header>
 		
-		<!-- Navigation menu with links to different sections of the website -->
+				<!-- Navigation menu with links to different sections of the website -->
 			   <nav>
 					<ul>
-						<li><a href="Adrian Szmajewski.html">About Me</a></li>
+						<li><a href="Adrian_Szmajewski.html">About Me</a></li>
 						<li><a href="resume.html">Resume</a></li>
 						<li><a href="contact.html">Contact</a></li>
-						<li><a href="Adrian Szmajewski - CV.docx" download>Download CV</a></li> 
+						<li><a href="Adrian_Szmajewski_CV.docx" download>Download CV</a></li> 
 					</ul>
 				</nav>
 				<section>
@@ -128,7 +128,7 @@
     </div>
  	<!-- Footer section with copyright information -->
 	<footer>
-        <p>© 2024 Adrian Szmajewski - All rights reserved.</p>
+        <p>© 2025 Adrian Szmajewski - All rights reserved.</p>
     </footer>
 </body>
 </html>
