--- a/Adrian Szmajewski CV/resume.html
+++ b/Adrian Szmajewski CV/resume.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom CSS file --><!-- Custom CSS file -->
-    <link rel="stylesheet" href="Adrian Szmajewski.css">
+    <link rel="stylesheet" href="Adrian_Szmajewski.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -35,10 +35,10 @@
     <!-- Navigation Menu -->
     <nav>
         <ul>
-            <li><a href="Adrian Szmajewski.html">About Me</a></li>
+            <li><a href="Adrian_Szmajewski.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="Adrian Szmajewski - CV.docx" download>Download CV</a></li> <!-- Update path here -->
+            <li><a href="Adrian_Szmajewski_CV.docx" download>Download CV</a></li> <!-- Update path here -->
         </ul>
     </nav>
 
@@ -162,7 +162,7 @@
 
     <!-- Footer section with copyright information -->
     <footer>
-        <p>© 2024 Adrian Szmajewski - All rights reserved.</p>
+        <p>© 2025 Adrian Szmajewski - All rights reserved.</p>
     </footer>
 </body>
 </html>
