--- a/Adrian Szmajewski CV/Adrian_Szmajewski.html
+++ b/Adrian Szmajewski CV/Adrian_Szmajewski.html
@@ -49,7 +49,7 @@
 				</section>
 
 	<!-- Bootstrap container for layout structure -->
-	<div class="container-fluid mt-3"></div>
+	<div class="container-fluid mt-3">
 		<div class="row">
 
 			 <!-- Profile section with personal information and career goals -->
@@ -85,9 +85,7 @@
 			</div>
 		</div>	
 	</div>
-		</head>
-		<body>
-		
+
 	 <!-- Social media section with links to professional profiles -->	
     <section id="social">
         <h3>Social Media</h3>
