--- a/Adrian Szmajewski CV/resume.html
+++ b/Adrian Szmajewski CV/resume.html
@@ -12,7 +12,7 @@
 	<meta name="keywords" content="Web Development, Software Development, Software Solutions, Web Applications, Website Development, Mobile Applications, Full-Stack Development, Front-End, Back-End, UI/UX Design, Digital Transformation, SaaS, Cloud, E-commerce, Enterprise Software, Agile Development">
 	
     <!-- Favicon for browser tab -->
-    <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/favicons/favicon.ico">
 
      <!-- Bootstrap CSS for styling -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,24 +21,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom CSS file --><!-- Custom CSS file -->
-    <link rel="stylesheet" href="Adrian_Szmajewski.css">
+    <link rel="stylesheet" href="assets/css/adrian_szmajewski.css">
 </head>
 <body>
     <!-- Header Section -->
     <header>
         <h1>Adrian Szmajewski</h1>
         <h2>Aspiring Software Developer</h2>
-        <span><img src="JA32.jpg" alt="This is me"></span>
+        <span><img src="assets/images/me32.jpg" alt="This is me"></span>
     </header>
 
    
     <!-- Navigation Menu -->
     <nav>
         <ul>
-            <li><a href="Adrian_Szmajewski.html">About Me</a></li>
+            <li><a href="index.html">About Me</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="Adrian_Szmajewski_CV.docx" download>Download CV</a></li> <!-- Update path here -->
+            <li><a href="assets/documents/adrian_szmajewski_cv.docx" download>Download CV</a></li> <!-- Update path here -->
         </ul>
     </nav>
 
