--- a/adrian_szmajewski_cv/index.html
+++ b/adrian_szmajewski_cv/index.html
@@ -29,17 +29,17 @@
 		<header>
 			<h1>Adrian Szmajewski</h1>
 			<h2>Aspiring Software Developer</h2>
-			<span><img src="assets/images/me32.jpg" alt="This is me"></span>
+			<span><img aria-label="This is my photo" src="assets/images/me32.jpg" alt="This is me"></span>
 		</header>
 		
 				<!-- Navigation menu with links to different sections of the website -->
 			   <nav>
 					<ul>
-						<li><a href="index.html">About Me</a></li>
-						<li><a href="resume.html">Resume</a></li>
-						<li><a href="contact.html">Contact</a></li>
-						<li><a href="assets/documents/adrian_szmajewski_cv.docx" download>Download CV</a></li> 
-					</ul>
+						<li><a href="index.html" aria-label="Go to About Me section">About Me</a></li>
+						<li><a href="resume.html" aria-label="Go to Resume section">Resume</a></li>
+						<li><a href="contact.html" aria-label="Go to Contact section">Contact</a></li>
+						<li><a href="assets/documents/adrian_szmajewski_cv.docx" download aria-label="Download my CV document in Word format">Download CV</a></li> 
+				  	</ul>
 				</nav>
 				<section>
 					<div class="center-content">
@@ -87,15 +87,15 @@
 	</div>
 
 	 <!-- Social media section with links to professional profiles -->	
-    <section id="social">
+     <section id="social" aria-label="Social media links">
         <h3>Social Media</h3>
-        <a href="https://www.linkedin.com/in/adrian-szmajewski-45ba6729a/" class="button linkedin" target="_blank">LinkedIn</a>
-        <a href="https://github.com/adrian77720" class="button github" target="_blank">GitHub</a>
-        <a href="https://www.facebook.com/profile.php?id=100008835840784" class="button facebook" target="_blank">facebook</a>
+        <a href="https://www.linkedin.com/in/adrian-szmajewski-45ba6729a/" class="button linkedin" target="_blank" rel="noopener noreferrer" aria-label="Visit my LinkedIn profile">LinkedIn</a>
+        <a href="https://github.com/adrian77720" class="button github" target="_blank" rel="noopener noreferrer" aria-label="Visit my GitHub profile">GitHub</a>
+        <a href="https://www.facebook.com/profile.php?id=100008835840784" class="button facebook" target="_blank" rel="noopener noreferrer" aria-label="Visit my Facebook profile">Facebook</a>
     </section>
 	
 	<!-- Social media icons with SVG icons for better accessibility -->
-	<div class="social-bar">
+	<div class="social-bar" aria-label="Social media icons">
         <a href="https://www.linkedin.com/in/adrian-szmajewski-45ba6729a/" target="_blank" class="social-icon linkedin" aria-label="LinkedIn">
             <span class="icon-text">
 
